# react-webapp

./: .env.default  .gitignore  .gitmodules  LICENSE  README.md  configure_server.sh  docker-compose.yml  install guide.md  nginx-info.md
backend/: app.js  change.md  package-lock.json  package.json
backend/python/: getPlayers.py
backend/routes/: fifa.js  index.js
express-app/: .env.default  .gitignore  Dockerfile  app.js  constants.js  error_handler.js  package.json  server.js
express-app/tests/: app.test.js
fifa-api/: .env.default  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  api.py  app_factory.py  pyproject.toml  requirements.txt
fifa-api/resources/: search_players.py
fifa-api/resources/data/: clean_data_22.py  collect_data_23.py
fifa-api/tests/: test_search_players.py
nginx/: default.conf
react-app/: .gitignore  package.json
react-app/public/: index.html  manifest.json
react-app/src/: App.css  App.js  network.js
react-app/src/components/: PageContent.js
react-app/src/components/Buttons/: BlogButton.js  Button.css  Button.js  ButtonSubmit.js
react-app/src/components/FIFASearch/: Input.css  (+6 more)
react-app/src/constants/: colors.js  routes.js
server/: .env.default  Dockerfile  app.js  constants.js  package-lock.json  package.json  server.js
server/python/: getPlayers.py
server/routes/: fifa.js  index.js
webdev/: .env  .env.default  package-lock.json  package.json
webdev/public/: index.html
webdev/src/: App.css  App.js  network.js
webdev/src/components/: PageContent.css  PageContent.js
webdev/src/services/: fifa.js
(+46 files in other folders)
